[gd_scene load_steps=15 format=2]

[ext_resource path="res://art/ui/background 2.png" type="Texture" id=1]
[ext_resource path="res://scenes/TopUI.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/GoalPrefab.tscn" type="PackedScene" id=3]
[ext_resource path="res://art/ui/Bottom UI v 2.png" type="Texture" id=4]
[ext_resource path="res://scripts/Grid.gd" type="Script" id=5]
[ext_resource path="res://scenes/Sinker.tscn" type="PackedScene" id=6]
[ext_resource path="res://scripts/IceHolder.gd" type="Script" id=7]
[ext_resource path="res://scripts/LockHolder.gd" type="Script" id=8]
[ext_resource path="res://scripts/ConcreteHolder.gd" type="Script" id=9]
[ext_resource path="res://scripts/SlimeHolder.gd" type="Script" id=10]
[ext_resource path="res://scenes/GameOverPanel.tscn" type="PackedScene" id=11]
[ext_resource path="res://scripts/GoalHolder.gd" type="Script" id=12]
[ext_resource path="res://scenes/Goal.tscn" type="PackedScene" id=13]
[ext_resource path="res://art/obstacles/Ice.png" type="Texture" id=14]

[node name="GameWindow" type="Node2D"]

[node name="Background" type="TextureRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 576.0
margin_bottom = 1024.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 1 )
stretch_mode = 0

[node name="TopUI" parent="." index="1" instance=ExtResource( 2 )]

goal_prefab = ExtResource( 3 )

[node name="BottomUI" type="TextureRect" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 928.0
margin_right = 576.0
margin_bottom = 1020.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[node name="Grid" type="Node2D" parent="." index="3"]

script = ExtResource( 5 )
_sections_unfolded = [ "Transform" ]
width = 8
height = 10
x_start = 64
y_start = 800
offset = 64
y_offset = -2
empty_spaces = PoolVector2Array( 3, 9, 3, 8, 4, 9, 4, 8 )
ice_spaces = PoolVector2Array( 0, 0, 0, 8, 0, 7, 1, 8, 1, 7, 6, 8, 6, 7, 7, 8, 7, 7, 2, 4, 2, 3, 3, 4, 3, 3, 4, 4, 4, 3, 5, 4, 5, 3, 6, 0, 0, 1, 1, 0, 7, 0, 7, 1 )
lock_spaces = PoolVector2Array(  )
concrete_spaces = PoolVector2Array(  )
slime_spaces = PoolVector2Array(  )
max_score = 2000
piece_value = 10
current_counter_value = 100
is_moves = true
sinker_piece = ExtResource( 6 )
sinkers_in_scene = false
max_sinkers = 0

[node name="Timer" type="Timer" parent="Grid" index="0"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="IceHolder" type="Node2D" parent="." index="4"]

script = ExtResource( 7 )
value = "ice"

[node name="LockHolder" type="Node2D" parent="." index="5"]

script = ExtResource( 8 )

[node name="ConcreteHolder" type="Node2D" parent="." index="6"]

script = ExtResource( 9 )

[node name="SlimeHolder" type="Node2D" parent="." index="7"]

script = ExtResource( 10 )
_sections_unfolded = [ "Material" ]

[node name="DestroyTimer" type="Timer" parent="." index="8"]

process_mode = 1
wait_time = 0.4
one_shot = true
autostart = false

[node name="CollapseTimer" type="Timer" parent="." index="9"]

process_mode = 1
wait_time = 0.4
one_shot = true
autostart = false

[node name="RefillTimer" type="Timer" parent="." index="10"]

process_mode = 1
wait_time = 0.4
one_shot = true
autostart = false

[node name="GameOverPanel" parent="." index="11" instance=ExtResource( 11 )]

[node name="GoalHolder" type="Node" parent="." index="12"]

script = ExtResource( 12 )

[node name="Goal" parent="GoalHolder" index="0" instance=ExtResource( 13 )]

goal_texture = ExtResource( 14 )
max_needed = 22
goal_string = "ice"

[connection signal="check_goal" from="Grid" to="GoalHolder" method="_on_Grid_check_goal"]

[connection signal="check_goal" from="Grid" to="TopUI" method="_on_Grid_check_goal"]

[connection signal="damage_concrete" from="Grid" to="ConcreteHolder" method="_on_Grid_damage_concrete"]

[connection signal="damage_ice" from="Grid" to="IceHolder" method="_on_Grid_damage_ice"]

[connection signal="damage_lock" from="Grid" to="LockHolder" method="_on_Grid_damage_lock"]

[connection signal="damage_slime" from="Grid" to="SlimeHolder" method="_on_Grid_damage_slime"]

[connection signal="game_over" from="Grid" to="GameOverPanel" method="_on_Grid_game_over"]

[connection signal="make_concrete" from="Grid" to="ConcreteHolder" method="_on_Grid_make_concrete"]

[connection signal="make_ice" from="Grid" to="IceHolder" method="_on_Grid_make_ice"]

[connection signal="make_lock" from="Grid" to="LockHolder" method="_on_Grid_make_lock"]

[connection signal="make_slime" from="Grid" to="SlimeHolder" method="_on_Grid_make_slime"]

[connection signal="maximum_streak_reached" from="Grid" to="Grid" method="_on_Grid_maximum_streak_reached"]

[connection signal="setup_max_score" from="Grid" to="TopUI" method="_on_Grid_setup_max_score"]

[connection signal="update_counter" from="Grid" to="TopUI" method="_on_Grid_update_counter"]

[connection signal="update_score" from="Grid" to="TopUI" method="_on_Grid_update_score"]

[connection signal="timeout" from="Grid/Timer" to="Grid" method="_on_Timer_timeout"]

[connection signal="break_ice" from="IceHolder" to="GoalHolder" method="_on_IceHolder_break_ice"]

[connection signal="break_ice" from="IceHolder" to="TopUI" method="_on_IceHolder_break_ice"]

[connection signal="remove_lock" from="LockHolder" to="Grid" method="_on_LockHolder_remove_lock"]

[connection signal="remove_concrete" from="ConcreteHolder" to="Grid" method="_on_ConcreteHolder_remove_concrete"]

[connection signal="remove_slime" from="SlimeHolder" to="Grid" method="_on_SlimeHolder_remove_slime"]

[connection signal="timeout" from="DestroyTimer" to="Grid" method="_on_DestroyTimer_timeout"]

[connection signal="timeout" from="CollapseTimer" to="Grid" method="_on_CollapseTimer_timeout"]

[connection signal="timeout" from="RefillTimer" to="Grid" method="_on_RefillTimer_timeout"]

[connection signal="create_goal" from="GoalHolder" to="TopUI" method="_on_GoalHolder_create_goal"]


